created meal db model

--- a/app/views/layouts/_meal_info.html.erb
+++ b/app/views/layouts/_meal_info.html.erb
@@ -24,7 +24,7 @@
 				 </span>
 			</div>
 			<div class="meal-blurb">
-				<p class="tag" style="font-size: 10px; color: #A34775">BRUNCH<p>
+				<p class="tag" style="font-size: 10px; color: #A34775">EUROPEAN<p>
 				<p> French Breakfast <p>
 					<p style="font-size: 10px;">
 						<span style="float: left;"> @Castro </span>
@@ -42,7 +42,7 @@
 					 </span>
 				</div>
 				<div class="meal-blurb">
-					<p class="tag" style="font-size: 10px; color: #A34775">SANDWICHES<p>
+					<p class="tag" style="font-size: 10px; color: #A34775">AMERICAN<p>
 					<p> Philly Style <p>
 						<p style="font-size: 10px;">
 							<span style="float: left;"> @Japantown </span>
