--- a/app/views/layouts/_search_bar.html.erb
+++ b/app/views/layouts/_search_bar.html.erb
@@ -2,21 +2,23 @@
 	<form class="navbar-form navbar-left" role="search">
 		<div class="form-group">
 		
-			<select class="form-control">
+			<select class="form-control" name="query[tag]">
 				<option value="" disabled selected>What are you craving?</option>
 				<option value="asian">Asian</option>
-				<option value="italian">Italian</option>
+				<option value="italian">European</option>
 				<option value="indian">Indian</option>
 				<option value="american">American</option>
 				<option value="seafood">Seafood</option>
 				<option value="fusion">Fusion</option>
 			</select>
 		
-			<input type="text" class="form-control" placeholder="Location">
+			<input type="text" name="query[location]" class="form-control" placeholder="Location">
 		
-			<input type="date" class="form-control" name="date" value="" placeholder="Date">
+			<input type="date" name="query[start_date]" class="form-control" name="date" value="Start Date">
+			
+				<input type="date" name="query[end_date]" class="form-control" name="date" value="End Date">
 		
-			<select class="form-control">
+			<select class="form-control" name="query[guest_num]">
 				<option value="1">1 Guest</option>
 				<option value="2">2 Guests</option>
 				<option value="3">3 Guests</option>
@@ -25,7 +27,7 @@
 			</select>
 					
 		</div>
-		<button type="submit" class="btn btn-default form-control">Search</button>
+		<input type="submit" class="btn btn-default form-control" value="Search">
 		
 	</form>
 	</div>
