--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -12,21 +12,21 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner" role="listbox" max-width="600" max-height="400">
 				<div class="item active" >
-					<%= image_tag "rsz_thai_food.jpg", class: "carousel-img" %>
+					<img src="/assets/rsz_thai_food.jpg" class= "carousel-img">
 					<div class="carousel-caption">
 						<h4> Join a community of food lovers and cooks. Experience unique meals together.</h4>
 					</div>
 				</div>
 		
 				<div class="item">
-					<%= image_tag "rsz_candle-light.jpg", class: "carousel-img"%>
+					<img src="/assets/rsz_candle-light.jpg" class= "carousel-img">
 					<div class="carousel-caption">
 						<h4> Join a community of food lovers and cooks. Experience unique meals together.</h4>
 					</div>
 				</div>
 		
 				<div class="item">
-					<%= image_tag "rsz_mexican.jpg", class: "carousel-img" %>
+					<img src="/assets/rsz_mexican.jpg" class= "carousel-img">
 					<div class="carousel-caption">
 						<h4> Join a community of food lovers and cooks. Experience unique meals together.</h4>
 					</div>
@@ -52,7 +52,7 @@
 	<form class="navbar-form navbar-left" role="search">
 		<div class="form-group">
 		
-			<select class="form-control" name="query[tag]">
+			<select class="form-control" name="tag">
 				<option value="" disabled selected>What are you craving?</option>
 				<option value="asian">Asian</option>
 				<option value="italian">European</option>
@@ -62,13 +62,13 @@
 				<option value="fusion">Fusion</option>
 			</select>
 		
-			<input type="text" name="query[location]" class="form-control" placeholder="Location">
+			<input type="text" name="location" class="form-control" placeholder="Location">
 		
-			<input type="date" name="query[start_date]" class="form-control" name="date" value="Start Date">
+			<input type="date" name="start_date" class="form-control" name="date" value="Start Date">
 			
-				<input type="date" name="query[end_date]" class="form-control" name="date" value="End Date">
+				<input type="date" name="end_date" class="form-control" name="date" value="End Date">
 		
-			<select class="form-control" name="query[guest_num]">
+			<select class="form-control" name="guest_num">
 				<option value="1">1 Guest</option>
 				<option value="2">2 Guests</option>
 				<option value="3">3 Guests</option>
@@ -77,7 +77,7 @@
 			</select>
 					
 		</div>
-		<input type="submit" class="btn btn-default form-control" value="Search">
+		<button type="submit" class="btn btn-default form-control" >Search </button>
 		
 	</form>
 	</div>
@@ -96,7 +96,7 @@
 	<div class="row">
 		<div class="col-xs-4 meal-info" style="background-image: url('/assets/rsz_seafood.jpg');">
 			<div class="host-profile">
-				<%= image_tag "host1.jpg", class: "host-pic"%>
+				<img src="/assets/host1.jpg" class= "host-pic">
 				<span style="float: left; margin-left: 5px;">
 					 Natasha R's
 				 </span>
@@ -113,7 +113,7 @@
 		
 		<div class="col-xs-4 meal-info" style="background-image: url('/assets/rsz_quiche.jpg');">
 			<div class="host-profile">
-				<%= image_tag "rsz_host2.jpg", class: "host-pic"%>
+				<img src="/assets/rsz_host2.jpg" class= "host-pic">
 				<span style="float: left; margin-left: 5px;">
 					 Andrei T's
 				 </span>
@@ -131,7 +131,7 @@
 		
 			<div class="col-xs-4 meal-info" style="background-image: url('/assets/rsz_philly-cheese.jpg');">
 				<div class="host-profile">
-					<%= image_tag "rsz_host3.jpg", class: "host-pic"%>
+					<img src="/assets/rsz_host3.jpg" class= "host-pic">
 					<span style="float: left; margin-left: 5px;">
 						 Marina Z's
 					 </span>
