styled current filters

--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -61,7 +61,7 @@
 				<option value="fusion">Fusion</option>
 			</select>
 		
-			<input type="text" name="location" class="search-bar" value="Current Location">
+			<input type="text" name="location" class="search-bar" placeholder="Current Location">
 		
 			<input type="date" name="start_date" class="search-bar" name="date" value="Start Date">
 			
