--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,8 @@
 @import "bootstrap";
 @import url(http://fonts.googleapis.com/css?family=Quicksand:400,700|Maven+Pro|Amatic+SC:700);
 
+//################## Home #####################
+
 body {
 	background-color: #FFF5EB;
 }
@@ -133,6 +135,43 @@ font-family: 'Quicksand', sans-serif;
 	border: 1px solid rgb(231, 231, 231);
 	height: 50px;
 	background-color: white;
+}
+
+//################## Search #####################
+
+.filter-choose {
+	
+}
+
+.current {
+	border-bottom: 1px solid #E7E7E7;
+	padding-bottom: 20px;
+	float:left;
+	font-family: 'Quicksand', sans-serif;
+}
+
+.current-filter {
+	border: 1px solid #A6A6A6;
+	display: inline-block;
+	float: left;
+	height: 50px;
+	padding: 5px;
+	font-family: 'Quicksand', sans-serif;
+	font-size: 15px;
+}
+
+.current-filter:hover {
+	background-color: #D4D4D6;
+}
+
+.current-filter:active {
+	box-shadow: 1px 1px 1px 1px #94E9FF;
+//	border: 2px solid #94E9FF;
+} 
+
+.filter-header {
+	font-weight: bold;
+	font-size: 15px;
 }
 
 //img.resize{
