--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,19 +55,19 @@ div.carousel-caption h4 {
 	border-radius: 0px;
 	-webkit-appearance: none;
 	float: left;
-	height: 50px;
+	height: 40px;
 	display: inline-block;
 	background-color: #F8F8F8;
 	border: 1px solid #A6A6A6;
-	padding-left: 15px;
-	padding-right: 15px;
+	padding-left: 10px;
+	padding-right: 5px;
 	color: #777;
 }
 
 .search-button {
 	margin-left: -1px;
 	float: left;
-	height: 50px;
+	height: 40px;
 	background-color: #F8F8F8;
 	border: 1px solid #A6A6A6;
 	width: 100px;
@@ -132,9 +132,13 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .footer {
+	display: none;
 	border: 1px solid rgb(231, 231, 231);
 	height: 50px;
 	background-color: white;
+	position:absolute;
+	bottom: 0;
+	width:100%;
 }
 
 //################## Search #####################
@@ -145,7 +149,7 @@ font-family: 'Quicksand', sans-serif;
 
 .current {
 	border-bottom: 1px solid #E7E7E7;
-	padding-bottom: 20px;
+	padding: 20px;
 	float:left;
 	font-family: 'Quicksand', sans-serif;
 }
@@ -158,20 +162,32 @@ font-family: 'Quicksand', sans-serif;
 	padding: 5px;
 	font-family: 'Quicksand', sans-serif;
 	font-size: 15px;
-}
-
-.current-filter:hover {
 	background-color: #D4D4D6;
 }
 
+.current-filter:hover {
+//	background-color: #D4D4D6;
+//  border: 2px solid #83ACFF;
+border: 2px solid #D147A3;
+}
+
+//on button press
 .current-filter:active {
-	box-shadow: 1px 1px 1px 1px #94E9FF;
+//	box-shadow: 1px 1px 1px 1px #94E9FF;
 //	border: 2px solid #94E9FF;
 } 
 
 .filter-header {
 	font-weight: bold;
 	font-size: 15px;
+}
+
+//########## Map ###########
+
+#map-canvas {
+	height: 550px;
+	margin: 0;
+	padding: 0;
 }
 
 //img.resize{
