--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -12,21 +12,21 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner" role="listbox" max-width="600" max-height="400">
 				<div class="item active" >
-					<img src="/assets/rsz_thai_food.jpg" class= "carousel-img">
+					<img src="https://s3-us-west-1.amazonaws.com/yumster/rsz_thai_food.jpg" class= "carousel-img">
 					<div class="carousel-caption">
 						<h4> Join a community of food lovers and cooks. Experience unique meals together.</h4>
 					</div>
 				</div>
 		
 				<div class="item">
-					<img src="/assets/rsz_candle-light.jpg" class= "carousel-img">
+					<img src="https://s3-us-west-1.amazonaws.com/yumster/rsz_candle-light.jpg" class= "carousel-img">
 					<div class="carousel-caption">
 						<h4> Join a community of food lovers and cooks. Experience unique meals together.</h4>
 					</div>
 				</div>
 		
 				<div class="item">
-					<img src="/assets/rsz_mexican.jpg" class= "carousel-img">
+					<img src="https://s3-us-west-1.amazonaws.com/yumster/rsz_mexican.jpg" class= "carousel-img">
 					<div class="carousel-caption">
 						<h4> Join a community of food lovers and cooks. Experience unique meals together.</h4>
 					</div>
@@ -49,6 +49,7 @@
 	
 <!--Search Bar -->
 	<div class="row search-div">
+		<div class="col-md-10 col-xs-offset-1">
 	<form>
 		
 			<select class="search-bar" name="tag">
@@ -61,7 +62,7 @@
 				<option value="fusion">Fusion</option>
 			</select>
 		
-			<input type="text" name="location" class="search-bar" placeholder="Current Location">
+			<input id="location" type="text" name="location" class="search-bar" placeholder="Current Location" style="width: 230px;">
 		
 			<input type="date" name="start_date" class="search-bar" name="date" value="Start Date">
 			
@@ -79,6 +80,7 @@
 		
 	</form>
 	</div>
+	</div>
 	
 <!--Explore your Neighborhood Header -->
 	
@@ -92,9 +94,9 @@
 <!-- Meal Info Samples -->
 	
 	<div class="row">
-		<div class="col-xs-4 meal-info" style="background-image: url('/assets/rsz_seafood.jpg');">
+		<div class="col-xs-3 col-xs-offset-2 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/seafood.jpg');">
 			<div class="host-profile">
-				<img src="/assets/host1.jpg" class= "host-pic">
+				<img src="https://s3-us-west-1.amazonaws.com/yumster/host1.jpg" class= "host-pic">
 				<span style="float: left; margin-left: 5px;">
 					 Natasha R's
 				 </span>
@@ -109,9 +111,9 @@
 			</div>
 		</div>
 		
-		<div class="col-xs-4 meal-info" style="background-image: url('/assets/rsz_quiche.jpg');">
+		<div class="col-xs-3 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/quiche.jpg');">
 			<div class="host-profile">
-				<img src="/assets/rsz_host2.jpg" class= "host-pic">
+				<img src="https://s3-us-west-1.amazonaws.com/yumster/host2.jpg" class= "host-pic">
 				<span style="float: left; margin-left: 5px;">
 					 Andrei T's
 				 </span>
@@ -127,9 +129,9 @@
 			
 		</div>
 		
-			<div class="col-xs-4 meal-info" style="background-image: url('/assets/rsz_philly-cheese.jpg');">
+			<div class="col-xs-3 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/philly-cheese.jpg');">
 				<div class="host-profile">
-					<img src="/assets/rsz_host3.jpg" class= "host-pic">
+					<img src="https://s3-us-west-1.amazonaws.com/yumster/host3.jpg" class= "host-pic">
 					<span style="float: left; margin-left: 5px;">
 						 Marina Z's
 					 </span>
