--- a/app/assets/templates/meals/search.jst.ejs
+++ b/app/assets/templates/meals/search.jst.ejs
@@ -1,6 +1,6 @@
-<div class="row" style="margin-top: 70px;">
+<div class="row" style="margin-top: 50px;">
 	
-	<div class="col-md-5">
+	<div class="col-md-5" id="map-canvas">
 	</div>
 	
 	<div class="col-md-7">
@@ -11,7 +11,7 @@
 			</div>
 			<div class="col-md-6">
 			<% for (var item in filters) { %>
-			<div class="current-filter">
+			<div class="current-filter" id="<%= item %>">
 				<b style="font-size: 10px;">#<%= item %></b>
 				<br>
 				<%= filters[item] %>
