--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#"><%= image_tag "yumster-logo.png", size: "150x40", id: "logo" %></a>
+    <a class="navbar-brand" href="#"><%= image_tag "https://s3-us-west-1.amazonaws.com/yumster/yumster-logo.png", size: "150x40", id: "logo" %></a>
   </div>
 
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
