--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,17 @@
 <html>
 <head>
 	<title>Yumster</title>
-	<link rel="shortcut icon" href="/assets/favicon.ico" >
+	<link rel="shortcut icon" href="https://s3-us-west-1.amazonaws.com/yumster/favicon.ico" >
 	<%= stylesheet_link_tag    "application", media: "all" %>
 	<%= javascript_include_tag "application" %>
 	<%= csrf_meta_tags %>
+	
+	
+	<script type="text/javascript"
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChbqdw1gU-hpEvqKLORMf79jSZ15DM-bM&libraries=places">
+	</script>
+	
+	
 </head>
 <body>
 	<%= render partial: "layouts/header" %>
@@ -13,9 +20,7 @@
 	<%= yield %>
 	
 	<footer class="footer">
-		<div class="container">
-			<p class="text-muted" style="margin-top: 15px;"> 2014 yumster. All rights reserved. </p>
-		</div>
+			<p class="text-muted" style="margin: 15px;"> 2014 yumster. All rights reserved. </p>
 	</footer>
 	
 	<%= yield :search_script %>
