--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,8 +51,8 @@ div.carousel-caption h4 {
 }
 
 .search-bar {
-	margin-left: -1px;
 	border-radius: 0px;
+	border-left: none;
 	-webkit-appearance: none;
 	float: left;
 	height: 40px;
@@ -62,10 +62,10 @@ div.carousel-caption h4 {
 	padding-left: 10px;
 	padding-right: 5px;
 	color: #777;
+//	font-family: 'Quicksand', sans-serif;
 }
 
 .search-button {
-	margin-left: -1px;
 	float: left;
 	height: 40px;
 	background-color: #F8F8F8;
@@ -74,8 +74,9 @@ div.carousel-caption h4 {
 }
 
 .search-button:hover {
-	background-color: #993366;
-	color: white;
+//	background-color: #993366;
+  background-color: #E8E8F0;
+//	color: white;
 }
 
 .head {
@@ -147,28 +148,39 @@ font-family: 'Quicksand', sans-serif;
 	
 }
 
-.current {
+.filter-div {
 	border-bottom: 1px solid #E7E7E7;
 	padding: 20px;
-	float:left;
 	font-family: 'Quicksand', sans-serif;
 }
 
 .current-filter {
-	border: 1px solid #A6A6A6;
+	border: 1px solid #47475E;//white;//#A6A6A6;//#6B2447;//black;//#A6A6A6;
 	display: inline-block;
 	float: left;
-	height: 50px;
-	padding: 5px;
+	height: 40px;
+	padding-right: 5px;
+	padding-left: 5px;
+	padding-bottom: 5px;
 	font-family: 'Quicksand', sans-serif;
-	font-size: 15px;
-	background-color: #D4D4D6;
+	font-size: 14px;
+	color: #47475E;//white;
+	background-color: #FF85E0;//#D66EBC;//#C530A0;
+	min-width: 85px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+//#E680CC;//white;//#D4D4D6;
+//  background: -webkit-radial-gradient(center, ellipse cover, #ef8bbf 0%,#d31d84 100%); /* Chrome10+,Safari5.1+ */
+}
+
+.current-filter span {
+	color: white;
 }
 
 .current-filter:hover {
 //	background-color: #D4D4D6;
-//  border: 2px solid #83ACFF;
-border: 2px solid #D147A3;
+  border: 2px solid #47475E;//#6B2447;//black;//#83ACFF;
+//border: 2px solid #D147A3;
 }
 
 //on button press
@@ -180,6 +192,19 @@ border: 2px solid #D147A3;
 .filter-header {
 	font-weight: bold;
 	font-size: 15px;
+	margin-left: -20px;
+	font-family: 'Quicksand', sans-serif;
+	width: 200px;
+}
+
+.search-bar.filter {
+//	margin-left: 15px;
+}
+
+.matches-bar {
+	background-color: #E7E7E7;
+	border-bottom: 1px solid #A6A6A6;
+	border-top: 1px solid #A6A6A6;
 }
 
 //########## Map ###########
