--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -49,7 +49,7 @@
 	
 <!--Search Bar -->
 	<div class="row search-div">
-		<div class="col-md-10 col-xs-offset-1">
+		<div class="col-md-10 col-sm-offset-1">
 	<form>
 		
 			<select class="search-bar" name="tag">
@@ -62,14 +62,14 @@
 				<option value="fusion">Fusion</option>
 			</select>
 		
-			<input id="location" type="text" name="location" class="search-bar" placeholder="Current Location" style="width: 230px;">
+			<input id="location" type="text" name="location" class="search-bar" placeholder="Location" style="width: 230px;">
 		
-			<input type="date" name="start_date" class="search-bar" name="date" value="Start Date">
+			<input type="date" name="start_date" class="search-bar" value="Start Date">
 			
-				<input type="date" name="end_date" class="search-bar" name="date" value="End Date">
+				<input type="date" name="end_date" class="search-bar" value="End Date">
 		
 			<select class="search-bar" name="guest_num">
-				<option value="1">1 Guest</option>
+				<option value="1" selected>1 Guest</option>
 				<option value="2">2 Guests</option>
 				<option value="3">3 Guests</option>
 				<option value="4">4 Guests</option>
@@ -93,8 +93,8 @@
 	
 <!-- Meal Info Samples -->
 	
-	<div class="row">
-		<div class="col-xs-3 col-xs-offset-2 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/seafood.jpg');">
+	<div class="row" style="margin-left: 127px;">
+		<div class="col-xs-3 col-sm-offset-2 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/seafood.jpg');">
 			<div class="host-profile">
 				<img src="https://s3-us-west-1.amazonaws.com/yumster/host1.jpg" class= "host-pic">
 				<span style="float: left; margin-left: 5px;">
