--- a/app/assets/templates/meals/search.jst.ejs
+++ b/app/assets/templates/meals/search.jst.ejs
@@ -5,24 +5,148 @@
 	
 	<div class="col-md-7">
 		
-		<div class="row current">
+		<div class= "row filter-div">
 			<div class="col-xs-3 filter-header">
-			Current Filters:
+				Dates:
 			</div>
-			<div class="col-md-6">
-			<% for (var item in filters) { %>
-			<div class="current-filter" id="<%= item %>">
-				<b style="font-size: 10px;">#<%= item %></b>
-				<br>
-				<%= filters[item] %>
+			  
+			<div class="col-lg-9" style="margin-left: -9px; float: left;">
+				<!-- <div class="col-sm-3" id="start_date"> -->
+					<input id="start_date" type="date" name="start_date" class="search-bar filter" placeholder="Start Date">
+				<!-- </div> -->
+				<!-- <div class="col-sm-3 col-sm-offset-1" id="end_date"> -->
+					<input id="end_date" type="date" name="end_date" class="search-bar filter" placeholder="End Date">
+				<!-- </div> -->
+				<!-- <div class="col-sm-3 col-sm-offset-1" id="end_date"> -->
+					<select id="guest_num" class="search-bar filter" name="guest_num">
+						<option value="1">1 Guest </option>
+						<option value="2">2 Guests</option>
+						<option value="3">3 Guests</option>
+						<option value="4">4 Guests</option>
+						<option value="5">5+ Guests</option>
+					</select>
+				<!-- </div> -->
 			</div>
-			<% } %>
 		</div>
-		</div>
-		
-		<div class= "row filter-choose">
+			
+		<div class= "row filter-div">
+			<div class="col-sm-3 filter-header">
+				Cuisine:
 			</div>
+			  
+			<div class="col-lg-9" style="margin-left: 180px;">
+				<select id="tag" class="search-bar filter" name="tag"> <!-- style="margin-top: -20px;"> -->
+					<option value="" disabled selected>What are you craving?</option>
+					<option value="asian">Asian</option>
+					<option value="italian">European</option>
+					<option value="indian">Indian</option>
+					<option value="american">American</option>
+					<option value="seafood">Seafood</option>
+					<option value="fusion">Fusion</option>
+				</select>
+			</div>
+		</div>
+			
+		<div class= "row filter-div">
+			<div class="col-xs-3 filter-header">
+				Price Range:
+			</div>
+			  
+			<div class="col-lg-9">
+				<!--filter bar -->
+			</div>
+		</div>
+			
+		<div class="row filter-div">
+			<div class="col-xs-3 filter-header">
+				Current Filters:
+			</div>
+			<div class="col-md-6" style="width: 440px;">
+				<% for (var item in filters) { %>
+					<div class="current-filter">
+						<b style="font-size: 10px;">
+							<% if (item === "location") { %>
+								<span class="glyphicon glyphicon-map-marker"> </span>
+							<% } else if (item === "tag") { %>
+							  <span class="glyphicon glyphicon-cutlery"> </span>
+							<% } else if (item === "guest_num") { %>
+								<span class="glyphicon glyphicon-user"> </span>
+							<% } else if (item === "start_date" || item === "end_date") { %>
+								<span class="glyphicon glyphicon-calendar"> </span>
+							<% } else if (item === "guest_num") { %>
+								<span class="glyphicon glyphicon-calendar"> </span>
+							<% } %>
+						</b>
+						<br>
+						<%= filters[item] %>
+					</div>
+					<% } %>
+				</div>
+			</div>
+				
+			<div class="row filter-div matches-bar">
+				<div class="col-xs-3 filter-header">
+					<%= meals.length %> Matches
+					<span class="glyphicon glyphicon-chevron-down"></span>
+				</div>
+			</div>
+			
+			<!--listings -->
+			
+			<div class="row">
+				<div class="col-xs-3 col-sm-offset-1 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/seafood.jpg');">
+					<div class="host-profile">
+						<img src="https://s3-us-west-1.amazonaws.com/yumster/host1.jpg" class= "host-pic">
+						<span style="float: left; margin-left: 5px;">
+							Natasha R's
+						</span>
+					</div>
+					<div class="meal-blurb">
+						<p class="tag">SEAFOOD<p>
+							<p> Under the Sea <p>
+								<p style="font-size: 10px;">
+									<span style="float: left;"> @Mission </span>
+									<span style="float: right;">$25/p </span>
+								</p>
+							</div>
+						</div>
 		
-	</div>
+						<div class="col-xs-3 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/quiche.jpg');">
+							<div class="host-profile">
+								<img src="https://s3-us-west-1.amazonaws.com/yumster/host2.jpg" class= "host-pic">
+								<span style="float: left; margin-left: 5px;">
+									Andrei T's
+								</span>
+							</div>
+							<div class="meal-blurb">
+								<p class="tag">EUROPEAN<p>
+									<p> French Breakfast <p>
+										<p style="font-size: 10px;">
+											<span style="float: left;"> @Castro </span>
+											<span style="float: right;">$20/p </span>
+										</p>
+									</div>
+			
+								</div>
+		
+								<div class="col-xs-3 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/philly-cheese.jpg');">
+									<div class="host-profile">
+										<img src="https://s3-us-west-1.amazonaws.com/yumster/host3.jpg" class= "host-pic">
+										<span style="float: left; margin-left: 5px;">
+											Marina Z's
+										</span>
+									</div>
+									<div class="meal-blurb">
+										<p class="tag">AMERICAN<p>
+											<p> Philly Style <p>
+												<p style="font-size: 10px;">
+													<span style="float: left;"> @Japantown </span>
+													<span style="float: right;">$30/p </span>
+												</p>
+											</div>
+										</div>
+									</div>
+		
+								</div>
 	
-	</div>
+							</div>
