--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,90 +1,101 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-<div class="container container-fluid">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#"><%= image_tag "https://s3-us-west-1.amazonaws.com/yumster/yumster-logo.png", size: "150x40", id: "logo" %></a>
-  </div>
-
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav navbar-right">
-    <% if signed_in? %>
-		
-		<!-- <div class="dropdown">
-		  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-		    <%= current_user.name %>
-		    <span class="caret"></span>
-		  </button> -->
-			
-		  <div class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-		    <%= current_user.name %>
-		    <span class="caret"></span>
-			</div>
-
-		  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-		    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Guest Meals</a></li>
-		    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Host Meals</a></li>
-		    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">View Profile</a></li>
-		    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Edit Profile</a></li>
-				<li role="presentation"><%= link_to "Sign out", session_url, method: :delete, role: "menuitem", tabindex: "-1" %></li>
-		  </ul>
+	<div class="container container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#"><%= image_tag "https://s3-us-west-1.amazonaws.com/yumster/yumster-logo.png", size: "150x40", id: "logo" %></a>
 		</div>
+
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+			  
+<!--search bar -->
+				<li class='left-nav-list-item'>
+					<form class='navbar-form navbar-left' id='search-wrapper' role='search'>
+						<div class='form-group'>
+							<input style="border-radius: 0px; -webkit-appearance: none;" type='text' id='location-search' class='form-control' name='location' placeholder='Where to?'>
+						</div>
+						<button style="border-radius: 0px; -webkit-appearance: none; margin-left: -4px;" type='submit' class='btn btn-default'>Search</button>
+					</form>
+				</li>
+								
+				<% if signed_in? %>
+		
+				<!-- <div class="dropdown">
+					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+					<%= current_user.name %>
+					<span class="caret"></span>
+					</button> -->
+			
+					<div class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+						<%= current_user.name %>
+						<span class="caret"></span>
+					</div>
+
+					<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Guest Meals</a></li>
+						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Host Meals</a></li>
+						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">View Profile</a></li>
+						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Edit Profile</a></li>
+						<li role="presentation"><%= link_to "Sign out", session_url, method: :delete, role: "menuitem", tabindex: "-1" %></li>
+					</ul>
+				</div>
   
-    <% else %>
-			<li>
-				<a data-toggle="modal" data-target="#sign-up-modal">Sign Up
-				</a>
-			</li>
-		<li>
-			<a data-toggle="modal" data-target="#sign-in-modal">Log In
-			</a>
-		</li>
-    <% end %>
-    </ul>
-  </div>
-</div>
+				<% else %>
+				<li>
+					<a data-toggle="modal" data-target="#sign-up-modal">Sign Up
+					</a>
+				</li>
+				<li>
+					<a data-toggle="modal" data-target="#sign-in-modal">Log In
+					</a>
+				</li>
+				<% end %>
+			</ul>
+		</div>
+	</div>
 </nav>
 
 <% if flash[:errors] %>
 <div class="alert alert-warning alert-dismissible" role="alert">
-   <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-<%= flash[:errors].join("<br>").html_safe %>
+	<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	<%= flash[:errors].join("<br>").html_safe %>
 </div>
 <% end %>
 
-	<div class="modal fade" id="sign-in-modal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-					<h4 class="modal-title">Log In</h4>
-				</div>
-				<div class="modal-body">
+<div class="modal fade" id="sign-in-modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+				<h4 class="modal-title">Log In</h4>
+			</div>
+			<div class="modal-body">
 				
-					<%= render partial: "sessions/new" %>
+				<%= render partial: "sessions/new" %>
 				
-				</div>
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 	
-	<div class="modal fade" id="sign-up-modal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-					<h4 class="modal-title">Sign Up</h4>
-				</div>
-				<div class="modal-body">
+<div class="modal fade" id="sign-up-modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+				<h4 class="modal-title">Sign Up</h4>
+			</div>
+			<div class="modal-body">
 				
-					<%= render partial: "users/new" %>
+				<%= render partial: "users/new" %>
 				
-				</div>
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 	
