--- a/app/assets/templates/meals/search.jst.ejs
+++ b/app/assets/templates/meals/search.jst.ejs
@@ -10,7 +10,7 @@
 				Dates:
 			</div>
 			  
-			<div class="col-lg-9" style="margin-left: -9px; float: left;">
+			<div class="col-lg-9" style="margin-left: 180px; float: left;">
 				<!-- <div class="col-sm-3" id="start_date"> -->
 					<input id="start_date" type="date" name="start_date" class="search-bar filter" placeholder="Start Date">
 				<!-- </div> -->
@@ -52,8 +52,12 @@
 				Price Range:
 			</div>
 			  
-			<div class="col-lg-9">
-				<!--filter bar -->
+			<div class="col-lg-9" style="margin-left: 180px;">
+				<div id="price" class="slider"></div>
+				<div style="margin-top: 5px;">
+					<span id="min-price" style="float: left; margin-left: -7px;">$0 </span>
+					<span id="min-price" style="float: right; margin-right: 50px;">$1000+ </span>
+				</div>
 			</div>
 		</div>
 			
@@ -61,9 +65,9 @@
 			<div class="col-xs-3 filter-header">
 				Current Filters:
 			</div>
-			<div class="col-md-6" style="width: 440px;">
+			<div class="col-md-6" style="width: 440px; margin-left: 180px;">
 				<% for (var item in filters) { %>
-					<div class="current-filter">
+					<div class="search-bar current-filter">
 						<b style="font-size: 10px;">
 							<% if (item === "location") { %>
 								<span class="glyphicon glyphicon-map-marker"> </span>
