--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -52,7 +52,7 @@
 	
 	<!--Search Bar -->
 	<div class="row search-div">
-		<div class="col-md-10 col-sm-offset-1">
+		<div class="col-md-10 col-md-offset-1">
 			<form>
 		
 				<select class="search-bar" name="tag">
@@ -87,7 +87,7 @@
 	
 	<!--Explore your Neighborhood Header -->
 	
-	<div class="row" style="margin-top: 15px;">
+	<div class="row" ><!-- style="margin-top: 15px;"> -->
 		<div class="col-md-8 col-md-offset-4 head">
 			<h2> Explore your Neighborhood </h2>
 			<h5> <i>...what tantalizing tastes await around the corner </i> </h5>
@@ -97,24 +97,26 @@
 	<!-- Meal Info Samples -->
 	
 	<div class="row" style="margin-left: 127px;">
-		<div class="col-xs-3 col-sm-offset-2 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/seafood.jpg');">
+		
+		<div class="col-md-3 col-md-offset-1 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/seafood.jpg');">
 			<div class="host-profile">
-				<img src="https://s3-us-west-1.amazonaws.com/yumster/host1.jpg" class= "host-pic">
+				<img src="https://s3-us-west-1.amazonaws.com/yumster/host1.jpg" class="host-pic">
 				<span style="float: left; margin-left: 5px;">
 					Natasha R's
 				</span>
 			</div>
 			<div class="meal-blurb">
-				<p class="tag">SEAFOOD<p>
-					<p> Under the Sea <p>
-						<p style="font-size: 10px;">
-							<span style="float: left;"> @Mission </span>
-							<span style="float: right;">$25/p </span>
-						</p>
-					</div>
-				</div>
+				<p class="tag">SEAFOOD</p>
+				<p> Under the Sea </p>
+				<p style="font-size: 10px;">
+				  <span style="float: left;"> @Mission </span>
+					<span style="float: right;">$25/p </span>
+				</p>
+			</div>
+		</div>
 		
-				<div class="col-xs-3 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/quiche.jpg');">
+				<div class="col-md-3 col-md-offset-1 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/quiche.jpg');">
+					
 					<div class="host-profile">
 						<img src="https://s3-us-west-1.amazonaws.com/yumster/host2.jpg" class= "host-pic">
 						<span style="float: left; margin-left: 5px;">
@@ -122,8 +124,8 @@
 						</span>
 					</div>
 					<div class="meal-blurb">
-						<p class="tag">EUROPEAN<p>
-							<p> French Breakfast <p>
+						<p class="tag">EUROPEAN</p>
+							<p> French Breakfast </p>
 								<p style="font-size: 10px;">
 									<span style="float: left;"> @Castro </span>
 									<span style="float: right;">$20/p </span>
@@ -132,7 +134,8 @@
 			
 						</div>
 		
-						<div class="col-xs-3 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/philly-cheese.jpg');">
+						<div class="col-md-3 col-md-offset-1 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/philly-cheese.jpg');">
+							
 							<div class="host-profile">
 								<img src="https://s3-us-west-1.amazonaws.com/yumster/host3.jpg" class= "host-pic">
 								<span style="float: left; margin-left: 5px;">
@@ -140,8 +143,8 @@
 								</span>
 							</div>
 							<div class="meal-blurb">
-								<p class="tag">AMERICAN<p>
-									<p> Philly Style <p>
+								<p class="tag">AMERICAN</p>
+									<p> Philly Style </p>
 										<p style="font-size: 10px;">
 											<span style="float: left;"> @Japantown </span>
 											<span style="float: right;">$30/p </span>
