--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,9 +17,9 @@
 				<li class='left-nav-list-item'>
 					<form class='navbar-form navbar-left' id='search-wrapper' role='search'>
 						<div class='form-group'>
-							<input style="border-radius: 0px; -webkit-appearance: none;" type='text' id='location-search' class='form-control' name='location' placeholder='Where to?'>
+							<input style="border-radius: 0px; -webkit-appearance: none; width: 230px;" type='text' id='location-header' class='form-control' name='location' placeholder='Location'>
 						</div>
-						<button style="border-radius: 0px; -webkit-appearance: none; margin-left: -4px;" type='submit' class='btn btn-default'>Search</button>
+						<button style="border-radius: 0px; -webkit-appearance: none; margin-left: -4px;" type='submit' id="button-header" class='btn btn-default'>Search</button>
 					</form>
 				</li>
 								
