--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,7 +62,7 @@ div.carousel-caption h4 {
 	padding-left: 10px;
 	padding-right: 5px;
 	color: #555555;
-//	font-family: 'Quicksand', sans-serif;
+	font-family: 'Quicksand', sans-serif;
 }
 
 .search-button {
@@ -71,6 +71,7 @@ div.carousel-caption h4 {
 	background-color: #F8F8F8;
 	border: 1px solid #A6A6A6;
 	width: 100px;
+	font-family: 'Quicksand', sans-serif;
 }
 
 .search-button:hover {
