added backbone user model

--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -58,7 +58,7 @@
 				<select class="search-bar" name="tag">
 					<option value="" disabled selected>What are you craving?</option>
 					<% for (var item in cuisines) { %>
-						<option value="<%= cuisines[item].toLowerCase() %>"><%= cuisines[item] %></option>
+						<option value="<%= cuisines[item] %>"><%= cuisines[item] %></option>
 					<% } %>
 				</select>
 		
@@ -103,7 +103,7 @@
 				</span>
 			</div>
 			<div class="meal-blurb">
-				<p class="tag">SEAFOOD</p>
+				<p class="tag">LATIN AMERICAN</p>
 				<p> Under the Sea </p>
 				<p style="font-size: 10px;">
 				  <span style="float: left;"> @Mission </span>
@@ -121,7 +121,7 @@
 						</span>
 					</div>
 					<div class="meal-blurb">
-						<p class="tag">EUROPEAN</p>
+						<p class="tag">WESTERN</p>
 							<p> French Breakfast </p>
 								<p style="font-size: 10px;">
 									<span style="float: left;"> @Castro </span>
@@ -140,7 +140,7 @@
 								</span>
 							</div>
 							<div class="meal-blurb">
-								<p class="tag">AMERICAN</p>
+								<p class="tag">WESTERN</p>
 									<p> Philly Style </p>
 										<p style="font-size: 10px;">
 											<span style="float: left;"> @Japantown </span>
